# ode_collapser

./: README.md  ode_collapser.py  pyproject.toml  zoo_of_odes.py
demo_notebooks/: demo_use_of_libraries.ipynb  experiments.ipynb  mismatched_oscillators.ipynb  quartic_double_well.ipynb
notebooks/: coordinate_transformations.ipynb  demo_use_of_libraries.ipynb  experiments.ipynb  first_order_collapser.ipynb  scratch.ipynb  transformed_solution_flexible_ode.ipynb  transformed_solution_quadratic_friction.ipynb  transformed_solution_version.ipynb
writeup/: ode_collapser.bib  ode_collapser.tex
writeup/notebooks/: derivatives_from_data.ipynb  discretization_space_viz.ipynb  double_well.ipynb  gp_fitting.ipynb  non_convexity_in_ICs.ipynb
