[project]
name = "ode-restrain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "tqdm>=4.67.1",
    "scipy>=1.16.0",
    "scikit-learn>=1.7.0",
    "scipy-stubs==1.16.0.2",
]
